--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.css">
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
     <title>Music Review Data</title>
     {% endif %}
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <!-- Bootstrap -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <!--load the javascript files last (but still in the header in case they're needed-->
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <!--datatables links-->
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.js"></script>
-    <!--end datatables links-->
+    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="/static/js/custom.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/static/js/d3code.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
